--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,36 +2,18 @@
 <style>
 .mySlides {display:none}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
-
 .w3-content{max-width:980px;margin:auto}
 .w3-display-container{position:relative}
-.w3-center{text-align:center!important}
-.w3-section{margin-top:16px!important;margin-bottom:16px!important}
-.w3-large{font-size:18px!important}
-.w3-text-white{color:#fff!important}
-/*this puts the buttons on the image*/
+.w3-center{text-align:center}
+.w3-section{margin-top:16px;margin-bottom:16px}
 .w3-display-bottomleft{position:absolute;left:0;bottom:0}
-.w3-left{float:left!important}.w3-right{float:right!important}
-.w3-padding-left{padding-left:16px!important}.w3-padding-right{padding-right:16px!important}
-.w3-text-khaki,.w3-hover-text-khaki:hover{color:#b4aa50!important}
-.w3-badge {
-  background-color:#cdcdcd;
-  color:#959595;
-  display:inline-block;
-  /*padding-left:16px;
-  padding-right:16px;*/
-  text-align:center;
-  border-radius:50%;
-  height:8px;
-  width:8px;
-  /*padding:0;*/
-  margin: 0 5px;
-}
-/*.w3-badge{height:13px;width:13px;padding:0}*/
-.w3-grey,.w3-hover-grey:hover{color:#cdcdcd!important;background-color:#959595!important}
-/*.w3-transparent{background-color:transparent}*/
+.w3-left{float:left}.w3-right{float:right}
+.w3-padding-left{padding-left:16px}.w3-padding-right{padding-right:16px}
+.w3-hover-text-khaki:hover{color:#b4aa50}
+.w3-badge{background-color:#cdcdcd;color:#959595;display:inline-block;text-align:center;border-radius:50%;height:8px;width:8px;margin: 0 5px;}
+.w3-grey,.w3-hover-grey:hover{color:#cdcdcd;background-color:#959595}
 </style>
-<body>
+
 
 <div class="w3-content w3-display-container" style="max-width:800px">
   <div class="mySlides">
@@ -46,12 +28,17 @@
     <img src="img_mountains_wide.jpg" style="width:100%">
   </div>
 
-  <div class="w3-center w3-section w3-large w3-text-white" style="width:100%">
+  <div class="mySlides">
+    <img src="img_fjords_wide.jpg" style="width:100%">
+  </div>
+
+  <div class="w3-center w3-section" style="width:100%">
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
   </div>
-  <div class="w3-center w3-section w3-large w3-display-bottomleft" style="width:100%">
+  <div class="w3-center w3-section w3-display-bottomleft" style="width:100%">
     <div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
   </div>
