--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -1,93 +1,3 @@
-
-<style>
-.mySlides {display:none}
-.w3-left, .w3-right, .w3-badge {cursor:pointer}
-.w3-content{max-width:1200px;margin:auto}
-.w3-display-container{position:relative}
-.w3-center{text-align:center}
-.w3-section{margin-top:16px;margin-bottom:16px}
-.w3-display-bottomleft{position:absolute;left:0;bottom:0}
-.w3-left{float:left}.w3-right{float:right}
-.w3-padding-left{padding-left:16px}.w3-padding-right{padding-right:16px}
-.w3-hover-text-khaki:hover{color:#b4aa50}
-.w3-badge{background-color:#cdcdcd;color:#959595;display:inline-block;text-align:center;border-radius:50%;height:8px;width:8px;margin: 0 5px;}
-.w3-grey,.w3-hover-grey:hover{color:#cdcdcd;background-color:#959595}
-
-/*CSS from original slider*/
-figure {
-  margin: 0; }
-
-figure.slider {
-  position: relative;
-  font-size: 0;
- }
-
-figure.slider figure {
-  height: auto;
-  display: inline-block;
-  position: inherit; }
-
-figure.slider img {
-  width: 100%;
-  height: auto; }
-
-figure.slider figure figcaption {
-  position: absolute;
-  top: 0;
-  right: 3%;
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  width: 25%;
-  height: 100%;
-  /*font-family: serif;*/
-  padding: 0 1.2rem;
-  text-align: center;
-}
-
-figure.slider figure figcaption h4 {
-  font-family: "Open Sans", sans-serif;
-    font-size: 1.7rem;
-    line-height: 2.2rem;
-    margin: 0 0 1rem 0;
-  }
-
-figure.slider figure figcaption section {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  }
-
-figure.slider figure figcaption p {
-  font-family: serif;
-  font-size: 1.3rem;
-  line-height: 1.8rem;
-  margin-top: .8rem; }
-
-figure.slider figure figcaption a {
-    color: #fff !important;
-  }
-
-@media only screen and (max-width: 450px) {
-figure.slider figure figcaption {
-  display: none;
-}
-}
-
-@media only screen and (max-width: 1000px) {
-  figure.slider figure figcaption h4 {
-      font-size: 1.2rem;
-      line-height: 1.8rem;
-      margin: 0 0 .6rem 0;
-    }
-    figure.slider figure figcaption p {
-      font-size: .8rem;
-      line-height: 1.2rem;
-      margin-top: .5rem;
-    }
-}
-</style>
-
-
 <div class="w3-content w3-display-container">
 
   <div class="mySlides">
@@ -164,16 +74,106 @@ figure.slider figure figcaption {
   </div>
 
   <div class="w3-center w3-section" style="width:100%">
+    <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-padding-right w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(1)">&#10095;</div>
+
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+
   </div>
-  <div class="w3-center w3-section w3-display-bottomleft" style="width:100%">
-    <div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-    <div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-  </div>
+
 </div>
+
+<style>
+.mySlides {display:none}
+.w3-left, .w3-right, .w3-badge {cursor:pointer}
+.w3-content{max-width:1200px;margin:auto}
+.w3-display-container{position:relative}
+.w3-center{text-align:center}
+.w3-section{margin-top:12px;margin-bottom:12px}
+/*.w3-display-bottomleft{position:absolute;left:0;bottom:-5px}*/
+.w3-left{float:left}.w3-right{float:right}
+.w3-padding-left{padding-left:16px}.w3-padding-right{padding-right:16px}
+.w3-hover-text-dkgrey:hover{color:#959595}
+.w3-badge{background-color:#cdcdcd;color:#959595;display:inline-block;text-align:center;border-radius:50%;height:8px;width:8px;margin: 0 5px;}
+.w3-text-grey{color:#cdcdcd;}
+.w3-grey,.w3-hover-grey:hover{color:#cdcdcd;background-color:#959595}
+
+/*CSS from original slider*/
+figure {
+  margin: 0; }
+
+figure.slider {
+  position: relative;
+  font-size: 0;
+ }
+
+figure.slider figure {
+  height: auto;
+  display: inline-block;
+  position: inherit; }
+
+figure.slider img {
+  width: 100%;
+  height: auto; }
+
+figure.slider figure figcaption {
+  position: absolute;
+  top: 0;
+  right: 3%;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  width: 25%;
+  height: 100%;
+  /*font-family: serif;*/
+  padding: 0 1.2rem;
+  text-align: center;
+}
+
+figure.slider figure figcaption h4 {
+  font-family: "Open Sans", sans-serif;
+    font-size: 1.7rem;
+    line-height: 2.2rem;
+    margin: 0 0 1rem 0;
+  }
+
+figure.slider figure figcaption section {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  }
+
+figure.slider figure figcaption p {
+  font-family: serif;
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+  margin-top: .8rem; }
+
+figure.slider figure figcaption a {
+    color: #fff !important;
+  }
+
+@media only screen and (max-width: 450px) {
+figure.slider figure figcaption {
+  display: none;
+}
+}
+
+@media only screen and (max-width: 1000px) {
+  figure.slider figure figcaption h4 {
+      font-size: 1.2rem;
+      line-height: 1.8rem;
+      margin: 0 0 .6rem 0;
+    }
+    figure.slider figure figcaption p {
+      font-size: .8rem;
+      line-height: 1.2rem;
+      margin-top: .5rem;
+    }
+}
+</style>
 
 <script>
 var slideIndex = 1;
@@ -185,7 +185,6 @@ function plusDivs(n) {
 
 function currentDiv(n) {
   showDivs(slideIndex = n);
-  // clearTimeout(carousel);
 }
 
 function showDivs(n) {
