added MnLink slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -73,14 +73,34 @@
       </figure>
   </div>
 
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="/DocumentCenter/View/404">
+          <!-- <img src="/ImageRepository/Document?documentID=406" alt=""> -->
+          <img src="images/HomepageImage_MnLink.jpg" alt="">
+          <figcaption>
+            <section>
+              <h4>New &amp; improved search</h4>
+              <h4>Easy access from any device</h4>
+            <p>Coming September 19</p>
+            </section>
+          </figcaption>
+          </a>
+        </figure>
+      </figure>
+  </div>
+
   <div class="w3-center w3-section" style="width:100%">
-    <!-- <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
+    <!-- advance left and right arrows
+    <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-padding-right w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(1)">&#10095;</div> -->
 
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
 
   </div>
 
