added author talk slide and image

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -1,9 +1,12 @@
+<!-- each slide has 2 images: one local for testing and one for live site. Comment out one or the other.  -->
+
 <div class="w3-content w3-display-container">
 
-  <div class="mySlides my-fade">
+<!-- Girl with salamander slide  -->
+  <!-- <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <!-- <img src="/ImageRepository/Document?documentID=325" alt=""> -->
+          <img src="/ImageRepository/Document?documentID=325" alt="">
           <img src="images/HomepageImage_girlSalamander.jpg" alt="">
           <figcaption>
             <section>
@@ -14,7 +17,7 @@
           </figcaption>
         </figure>
       </figure>
-  </div>
+  </div> -->
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -26,7 +29,7 @@
             <section>
             <h4>Author Expo 2016</h4>
             <p>Saturday, October 1, 2016 <br>
-              9:30 a.m. &ndash; 12:30 p.m. </p>
+              9:30 a.m. &ndash; 2:00 p.m. </p>
             <p>
               R.H. Stafford Library <br>
               8595 Central Park Place <br>
@@ -37,6 +40,29 @@
         </figure>
       </figure>
   </div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+      <figure>
+        <a href="/266/Author-Expo" style="text-decoration: none;">
+          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
+          <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
+          <figcaption>
+            <section>
+              <h4>Author Expo 2016</h4>
+              <p>Kao Kalia Yang will discuss her new book, &ldquo;The Song Poet.&rdquo;
+              </p>
+              <p>Saturday, October 1, 2016 <br>
+                1:00 &ndash; 2:00 p.m. </p>
+                <p>
+                  R.H. Stafford Library
+                </p>
+              </a>
+            </section>
+          </figcaption>
+        </figure>
+      </figure>
+    </div>
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -245,7 +271,7 @@ function showDivs(n) {
 }
 
 // var myIndex = 0;
-carousel();
+// carousel();
 
 function carousel() {
     var i;
