--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,8 +23,8 @@
       <figure class="slider">
         <figure>
           <a href="/266/Author-Expo" style="text-decoration: none;">
-            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
-            <img src="images/HomepageImage_authorExpo.jpg" alt="">
+            <img src="/ImageRepository/Document?documentID=326" alt="">
+            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt=""> -->
           <figcaption>
             <section>
             <h4>Author Expo 2016</h4>
@@ -45,16 +45,15 @@
     <figure class="slider">
       <figure>
         <a href="/266/Author-Expo" style="text-decoration: none;">
-          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
-          <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=407" alt="">
+          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>Author Expo 2016</h4>
               <p>Kao Kalia Yang will discuss her new book, &ldquo;The Song Poet.&rdquo;
               </p>
               <p>Saturday, October 1, 2016 <br>
-                1:00 &ndash; 2:00 p.m. </p>
-                <p>
+                1:00 &ndash; 2:00 p.m. <br>
                   R.H. Stafford Library
                 </p>
               </a>
@@ -68,8 +67,8 @@
       <figure class="slider">
         <figure>
           <a href="/273/A-Library-Card">
-          <!-- <img src="/ImageRepository/Document?documentID=327" alt=""> -->
-          <img src="images/HomepageImage_LibCardWeek.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=327" alt="">
+          <!-- <img src="images/HomepageImage_LibCardWeek.jpg" alt=""> -->
           <figcaption>
             <section>
             <h4>September is <br>
@@ -86,8 +85,8 @@
       <figure class="slider">
         <figure>
           <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
-          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
-          <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=331" alt="">
+          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>Stuck on homework?</h4>
@@ -103,8 +102,8 @@
       <figure class="slider">
         <figure>
           <a href="/DocumentCenter/View/404">
-          <!-- <img src="/ImageRepository/Document?documentID=406" alt=""> -->
-          <img src="images/HomepageImage_MnLink.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=406" alt="">
+          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>New &amp; improved search</h4>
@@ -271,7 +270,7 @@ function showDivs(n) {
 }
 
 // var myIndex = 0;
-// carousel();
+carousel();
 
 function carousel() {
     var i;
