Fierce Reads slide image and code added, link pending

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,8 +23,30 @@
       <figure class="slider">
         <figure>
           <a href="/266/Author-Expo" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=326" alt="">
-            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt=""> -->
+            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
+            <img src="images/HomepageImage_FierceReads.jpg" alt="">
+          <figcaption>
+            <section>
+            <h4>Join Us!</h4>
+            <p>Thursday, October 6, 2016 <br>
+              6:00 p.m. </p>
+            <p>
+              R.H. Stafford Library <br>
+              8595 Central Park Place <br>
+              Woodbury, MN </p>
+          </a>
+        </section>
+        </figcaption>
+        </figure>
+      </figure>
+  </div>
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="/266/Author-Expo" style="text-decoration: none;">
+            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
+            <img src="images/HomepageImage_authorExpo.jpg" alt="">
           <figcaption>
             <section>
             <h4>Author Expo 2016</h4>
@@ -45,8 +67,8 @@
     <figure class="slider">
       <figure>
         <a href="/266/Author-Expo" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=407" alt="">
-          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt=""> -->
+          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
+          <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
           <figcaption>
             <section>
               <h4>Author Expo 2016</h4>
@@ -67,8 +89,8 @@
       <figure class="slider">
         <figure>
           <a href="/273/A-Library-Card">
-          <img src="/ImageRepository/Document?documentID=327" alt="">
-          <!-- <img src="images/HomepageImage_LibCardWeek.jpg" alt=""> -->
+          <!-- <img src="/ImageRepository/Document?documentID=327" alt=""> -->
+          <img src="images/HomepageImage_LibCardWeek.jpg" alt="">
           <figcaption>
             <section>
             <h4>September is <br>
@@ -85,8 +107,8 @@
       <figure class="slider">
         <figure>
           <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
-          <img src="/ImageRepository/Document?documentID=331" alt="">
-          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt=""> -->
+          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
+          <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
           <figcaption>
             <section>
               <h4>Stuck on homework?</h4>
@@ -102,8 +124,8 @@
       <figure class="slider">
         <figure>
           <a href="/DocumentCenter/View/404">
-          <img src="/ImageRepository/Document?documentID=406" alt="">
-          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+          <!-- <img src="/ImageRepository/Document?documentID=406" alt=""> -->
+          <img src="images/HomepageImage_MnLink.jpg" alt="">
           <figcaption>
             <section>
               <h4>New &amp; improved search</h4>
@@ -126,6 +148,7 @@
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
 
   </div>
 
@@ -270,7 +293,7 @@ function showDivs(n) {
 }
 
 // var myIndex = 0;
-carousel();
+// carousel();
 
 function carousel() {
     var i;
