added link, fixed slide index to start at beginning

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -22,7 +22,7 @@
   <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <a href="/266/Author-Expo" style="text-decoration: none;">
+          <a href="/372/Fierce-Reads" style="text-decoration: none;">
             <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
             <img src="images/HomepageImage_FierceReads.jpg" alt="">
           <figcaption>
@@ -265,7 +265,7 @@ figure.slider figure figcaption a {
 </style>
 
 <script>
-var slideIndex = 1;
+var slideIndex = 0;
 showDivs(slideIndex);
 
 function plusDivs(n) {
@@ -293,7 +293,7 @@ function showDivs(n) {
 }
 
 // var myIndex = 0;
-// carousel();
+carousel();
 
 function carousel() {
     var i;
