--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,8 +23,8 @@
       <figure class="slider">
         <figure>
           <a href="/372/Fierce-Reads" style="text-decoration: none;">
-            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
-            <img src="images/HomepageImage_FierceReads.jpg" alt="">
+            <img src="/ImageRepository/Document?documentID=420" alt="">
+            <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
           <figcaption>
             <section>
             <h4>Join Us!</h4>
@@ -45,8 +45,8 @@
       <figure class="slider">
         <figure>
           <a href="/266/Author-Expo" style="text-decoration: none;">
-            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
-            <img src="images/HomepageImage_authorExpo.jpg" alt="">
+            <img src="/ImageRepository/Document?documentID=326" alt="">
+            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt=""> -->
           <figcaption>
             <section>
             <h4>Author Expo 2016</h4>
@@ -67,8 +67,8 @@
     <figure class="slider">
       <figure>
         <a href="/266/Author-Expo" style="text-decoration: none;">
-          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
-          <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=407" alt="">
+          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>Author Expo 2016</h4>
@@ -89,8 +89,8 @@
       <figure class="slider">
         <figure>
           <a href="/273/A-Library-Card">
-          <!-- <img src="/ImageRepository/Document?documentID=327" alt=""> -->
-          <img src="images/HomepageImage_LibCardWeek.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=327" alt="">
+          <!-- <img src="images/HomepageImage_LibCardWeek.jpg" alt=""> -->
           <figcaption>
             <section>
             <h4>September is <br>
@@ -107,8 +107,8 @@
       <figure class="slider">
         <figure>
           <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
-          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
-          <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=331" alt="">
+          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>Stuck on homework?</h4>
@@ -124,8 +124,8 @@
       <figure class="slider">
         <figure>
           <a href="/DocumentCenter/View/404">
-          <!-- <img src="/ImageRepository/Document?documentID=406" alt=""> -->
-          <img src="images/HomepageImage_MnLink.jpg" alt="">
+          <img src="/ImageRepository/Document?documentID=406" alt="">
+          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
           <figcaption>
             <section>
               <h4>New &amp; improved search</h4>
