added maker fest slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -22,6 +22,28 @@
   <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
+          <a href="/265/Maker-Fest" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=423" alt="">
+            <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+          <figcaption>
+            <section>
+            <h4>Maker Fest 2016</h4>
+            <p>Saturday, October 22, 2016 <br>
+              10:00 a.m. &ndash; 2:00 p.m. </p>
+            <p>
+              R.H. Stafford Library <br>
+              8595 Central Park Place <br>
+              Woodbury, MN </p>
+
+        </section>
+        </figcaption></a>
+        </figure>
+      </figure>
+  </div>
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
           <a href="/372/Fierce-Reads" style="text-decoration: none;">
             <img src="/ImageRepository/Document?documentID=420" alt="">
             <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
@@ -34,9 +56,9 @@
               R.H. Stafford Library <br>
               8595 Central Park Place <br>
               Woodbury, MN </p>
-          </a>
+
         </section>
-        </figcaption>
+        </figcaption></a>
         </figure>
       </figure>
   </div>
@@ -56,9 +78,9 @@
               R.H. Stafford Library <br>
               8595 Central Park Place <br>
               Woodbury, MN </p>
-          </a>
+
         </section>
-        </figcaption>
+        </figcaption></a>
         </figure>
       </figure>
   </div>
@@ -78,9 +100,9 @@
                 1:00 &ndash; 2:00 p.m. <br>
                   R.H. Stafford Library
                 </p>
-              </a>
+
             </section>
-          </figcaption>
+          </figcaption></a>
         </figure>
       </figure>
     </div>
@@ -130,7 +152,7 @@
             <section>
               <h4>New &amp; improved search</h4>
               <h4>Easy access from any device</h4>
-            <p>Coming September 19</p>
+
             </section>
           </figcaption>
           </a>
@@ -149,6 +171,7 @@
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span>
 
   </div>
 
@@ -292,8 +315,9 @@ function showDivs(n) {
   dots[slideIndex-1].className += " w3-grey";
 }
 
-// var myIndex = 0;
+// comment this function call out to stop carousel when testing
 carousel();
+//---------------
 
 function carousel() {
     var i;
