added Maker Fest Slide, took out Snoopy slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -107,13 +107,13 @@
       </figure>
     </div>
 
-  <div class="mySlides my-fade">
+  <!-- <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
           <a href="/273/A-Library-Card">
-          <img src="/ImageRepository/Document?documentID=327" alt="">
+          <img src="/ImageRepository/Document?documentID=327" alt=""> -->
           <!-- <img src="images/HomepageImage_LibCardWeek.jpg" alt=""> -->
-          <figcaption>
+          <!-- <figcaption>
             <section>
             <h4>September is <br>
             Library Card Sign-up Month</h4>
@@ -123,7 +123,7 @@
           </a>
         </figure>
       </figure>
-  </div>
+  </div> -->
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -171,7 +171,7 @@
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
-    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span>
+    <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
   </div>
 
