added cloudLibrary slide, deleted Author Expo slides

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -49,7 +49,7 @@
             <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
           <figcaption>
             <section>
-            <h4>Join Us!</h4>
+            <h4>Fierce Reads</h4>
             <p>Thursday, October 6, 2016 <br>
               6:00 p.m. </p>
             <p>
@@ -63,12 +63,12 @@
       </figure>
   </div>
 
-  <div class="mySlides my-fade">
+  <!-- <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <a href="/266/Author-Expo" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=326" alt="">
-            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt=""> -->
+          <a href="/266/Author-Expo" style="text-decoration: none;"> -->
+            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
+            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt="">
           <figcaption>
             <section>
             <h4>Author Expo 2016</h4>
@@ -83,14 +83,14 @@
         </figcaption></a>
         </figure>
       </figure>
-  </div>
+  </div> -->
 
-  <div class="mySlides my-fade">
+  <!-- <div class="mySlides my-fade">
     <figure class="slider">
       <figure>
-        <a href="/266/Author-Expo" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=407" alt="">
-          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt=""> -->
+        <a href="/266/Author-Expo" style="text-decoration: none;"> -->
+          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
+          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
           <figcaption>
             <section>
               <h4>Author Expo 2016</h4>
@@ -105,7 +105,7 @@
           </figcaption></a>
         </figure>
       </figure>
-    </div>
+    </div> -->
 
   <!-- <div class="mySlides my-fade">
       <figure class="slider">
@@ -160,6 +160,26 @@
       </figure>
   </div>
 
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="https://ebook.yourcloudlibrary.com/library/WashingtonCountyLibrary/Featured">
+          <img src="/ImageRepository/Document?documentID=432" alt="">
+          <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
+          <figcaption>
+            <section>
+              <h4>Hey, eBook Readers!</h4>
+              <h4>3M CloudLibrary <br>
+                is becoming <br>
+                cloudLibrary</h4>
+
+            </section>
+          </figcaption>
+          </a>
+        </figure>
+      </figure>
+  </div>
+
   <div class="w3-center w3-section" style="width:100%">
     <!-- advance left and right arrows
     <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
@@ -170,8 +190,8 @@
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
-    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
-    <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
+    <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
   </div>
 
